[gd_scene load_steps=22 format=3 uid="uid://d4jplsnyxuvsj"]

[ext_resource type="Script" uid="uid://c13orqrutie0a" path="res://scenes/UI/boss_kill_end_screen.gd" id="1_wt420"]
[ext_resource type="AudioStream" uid="uid://cabi6o4yb0fya" path="res://assets/audio/sfx/jingles_defeat.ogg" id="2_la7j2"]
[ext_resource type="PackedScene" uid="uid://cvnbs6tcv4ihn" path="res://scenes/UI/sound_button.tscn" id="3_iako6"]
[ext_resource type="Texture2D" uid="uid://ee6vs37x4c1j" path="res://scenes/game_object/boss_flag/flag0.png" id="3_utmbc"]
[ext_resource type="Theme" uid="uid://ivx8wu3sxxyt" path="res://resources/theme/theme.tres" id="4_2bg7d"]
[ext_resource type="Texture2D" uid="uid://cmi3uobfrqeci" path="res://scenes/game_object/boss_flag/flag1.png" id="4_omdf7"]
[ext_resource type="Texture2D" uid="uid://byrakg88yoihm" path="res://scenes/game_object/boss_flag/flag2.png" id="5_lqkqt"]
[ext_resource type="Texture2D" uid="uid://b1s7upcnp8ltl" path="res://assets/ui/saltparticle.png" id="5_rh5p2"]
[ext_resource type="Texture2D" uid="uid://brp3rsfdn2v3b" path="res://scenes/game_object/boss_flag/flag3.png" id="6_1i7b3"]
[ext_resource type="Texture2D" uid="uid://dt0lmbgrbttve" path="res://scenes/game_object/enemies/characters/ad.png" id="6_u4p6h"]

[sub_resource type="Animation" id="Animation_vffjv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_xxc11"]
resource_name = "in"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(2, 2), Vector2(2.4, 2.4), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_4vfk2"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_37p1v"]
_data = {
&"RESET": SubResource("Animation_vffjv"),
&"in": SubResource("Animation_xxc11"),
&"out": SubResource("Animation_4vfk2")
}

[sub_resource type="Animation" id="Animation_hndnh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ConfettiExplode:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8egnb"]
resource_name = "explode"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.03, 0.04, 0.06, 0.07, 0.09, 0.11, 0.12, 0.14, 0.15, 0.17, 0.2, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.29, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533, 0.0, 0.174533, 0.0, 0.0, -0.174533, 0.0, 0.174533, 0.0, -0.174533, 0.0, 0.174533, 0.0, -0.174533, 0.0, 0.174533, 0.0, -0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.18, 0.29),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1.7, 1.8), Vector2(1.8, 1.8), Vector2(2.3, 2.3), Vector2(2.3, 2.3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ConfettiExplode:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01iwb"]
_data = {
&"RESET": SubResource("Animation_hndnh"),
&"explode": SubResource("Animation_8egnb")
}

[sub_resource type="Animation" id="Animation_vipla"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8bt4w"]
resource_name = "wobble"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleLabel:self_modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 0, 1), Color(0, 1, 0, 1), Color(0, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 0, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ttvg"]
_data = {
&"RESET": SubResource("Animation_vipla"),
&"wobble": SubResource("Animation_8bt4w")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3yayi"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 25.0
angle_min = -212.6
angle_max = 212.6
velocity_pivot = Vector3(0, 10, 0)
radial_velocity_min = 99.98
radial_velocity_max = 746.14
gravity = Vector3(0, 200, 0)
linear_accel_min = 88.6
linear_accel_max = 100.0
radial_accel_min = -2.08
radial_accel_max = 4.13
tangential_accel_min = -100.0
tangential_accel_max = -89.12
damping_min = 70.467
damping_max = 100.0
scale_min = 0.1
scale_max = 0.7
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="BossKillEndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wt420")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_37p1v")
}
autoplay = "in"

[node name="CharAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_01iwb")
}

[node name="TextAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ttvg")
}
autoplay = "wobble"

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_la7j2")
volume_db = -15.0
pitch_scale = 0.75
bus = &"sfx"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="Flags" type="Node2D" parent="."]
position = Vector2(421, 239)

[node name="Sprite2D" type="Sprite2D" parent="Flags"]
position = Vector2(162, -56)
rotation = 0.671581
scale = Vector2(4, 4)
texture = ExtResource("3_utmbc")

[node name="Sprite2D2" type="Sprite2D" parent="Flags"]
position = Vector2(116, -94)
rotation = -0.0254348
scale = Vector2(4, 4)
texture = ExtResource("4_omdf7")

[node name="Sprite2D3" type="Sprite2D" parent="Flags"]
position = Vector2(-69, -97)
rotation = -0.0254348
scale = Vector2(4, 4)
texture = ExtResource("5_lqkqt")

[node name="Sprite2D4" type="Sprite2D" parent="Flags"]
position = Vector2(-128, -92)
rotation = -0.74458
scale = Vector2(4, 4)
texture = ExtResource("6_1i7b3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.784314)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "BOSS DESTROYED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
text = "You won!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_iako6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_2bg7d")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "  Upgrades  "

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_iako6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_2bg7d")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "  Main Menu  "

[node name="ConfettiExplode" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(492, 272)
scale = Vector2(0.402, 0.4)
emitting = false
amount = 500
process_material = SubResource("ParticleProcessMaterial_3yayi")
texture = ExtResource("5_rh5p2")
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="CharSprite" type="Sprite2D" parent="."]
position = Vector2(371, 238)
scale = Vector2(2, 2)
texture = ExtResource("6_u4p6h")
offset = Vector2(0, -6.5)
